--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "name": "root",
-  "private": true
+  "private": true,
+  "scripts": {
+    "dev": "pnpm -F docs docs:dev",
+    "build": "pnpm -F docs docs:build",
+    "build:lib": "pnpm -F @opentiny/tiny-robot build"
+  }
 }
