--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "pnpm -F docs docs:build",
     "build:lib": "pnpm -F @opentiny/tiny-robot build",
     "dev:ai-mocker": "pnpm --filter ai-mocker dev",
+    "dev:demo": "pnpm -F robot-demo dev",
     "format": "prettier --write --list-different \"packages/**/*.{ts,mts,tsx,vue}\"",
     "type-check": "pnpm -F @opentiny/tiny-robot type-check",
     "lint": "eslint . --fix",
