feat: add ai-adapter

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "dev": "pnpm -F docs docs:dev",
     "build": "pnpm -F docs docs:build",
     "build:lib": "pnpm -F @opentiny/tiny-robot build",
+    "dev:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter dev",
+    "build:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter build",
     "dev:ai-mocker": "pnpm --filter ai-mocker dev",
-    "dev:demo": "pnpm -F robot-demo dev",
+    "dev:demo": "npm run build:adapter && pnpm --filter tiny-robot-demo dev",
     "format": "prettier --write --list-different \"packages/**/*.{ts,mts,tsx,vue}\"",
     "type-check": "pnpm -F @opentiny/tiny-robot type-check",
     "lint": "eslint . --fix",
