--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -6,7 +6,8 @@
   "main": "./src/index.ts",
   "module": "./src/index.ts",
   "scripts": {
-    "build": "vue-tsc && vite build"
+    "build": "vue-tsc && vite build",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "vue": "^3.3.11"
@@ -15,6 +16,6 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vue-tsc": "^1.8.25"
+    "vue-tsc": "^2.2.8"
   }
 }
