add lint-staged and husky

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "dev": "pnpm -F docs docs:dev",
     "build": "pnpm -F docs docs:build",
     "build:lib": "pnpm -F @opentiny/tiny-robot build",
-    "format": "pnpm prettier --write --list-different \"packages/**/*.{ts,mts,tsx,vue}\"",
+    "format": "prettier --write --list-different \"packages/**/*.{ts,mts,tsx,vue}\"",
     "type-check": "pnpm -F @opentiny/tiny-robot type-check",
-    "lint": "pnpm eslint . --fix"
+    "lint": "eslint . --fix",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@vue/eslint-config-prettier": "^10.2.0",
