--- a/package.json
+++ b/package.json
@@ -4,6 +4,21 @@
   "scripts": {
     "dev": "pnpm -F docs docs:dev",
     "build": "pnpm -F docs docs:build",
-    "build:lib": "pnpm -F @opentiny/tiny-robot build"
+    "build:lib": "pnpm -F @opentiny/tiny-robot build",
+    "format": "prettier --write --list-different \"packages/**/*.{ts,mts,tsx,vue}\"",
+    "type-check": "pnpm -F @opentiny/tiny-robot type-check",
+    "lint": "eslint . --fix",
+    "prepare": "husky install"
+  },
+  "devDependencies": {
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.5.0",
+    "eslint": "^9.23.0",
+    "eslint-plugin-vue": "^10.0.0",
+    "husky": "^9.1.7",
+    "jiti": "^2.4.2",
+    "lint-staged": "^15.5.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.2.2"
   }
 }
