--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "root",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "pnpm -F docs docs:dev",
     "build": "pnpm -F docs docs:build",
     "build:lib": "pnpm -F @opentiny/tiny-robot build",
+    "dev:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter dev",
+    "build:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter build",
+    "dev:ai-mocker": "pnpm --filter ai-mocker dev",
+    "dev:demo": "npm run build:adapter && pnpm --filter tiny-robot-demo dev",
     "format": "prettier --write --list-different \"packages/**/*.{ts,mts,tsx,vue}\"",
     "type-check": "pnpm -F @opentiny/tiny-robot type-check",
     "lint": "eslint . --fix",
