--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -6,10 +6,13 @@
   "main": "./src/index.ts",
   "module": "./src/index.ts",
   "scripts": {
+    "test": "vite dev --open src/test/index.html",
     "build": "vue-tsc && vite build",
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@opentiny/vue": "^3.22.0",
+    "@opentiny/vue-icon": "^3.21.0",
     "markdown-it": "^14.1.0",
     "typed.js": "^2.1.0",
     "vue": "^3.3.11"
@@ -18,6 +21,7 @@
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.17",
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
     "less": "^4.2.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
