feat: add svgs package

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "dev:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter dev",
     "build:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter build",
     "dev:ai-mocker": "pnpm --filter ai-mocker dev",
-    "dev:demo": "concurrently 'pnpm dev:ai-mocker' 'pnpm:dev:adapter' 'pnpm:serve:frontend'",
+    "dev:demo": "npm run build:svgs && concurrently 'pnpm dev:ai-mocker' 'pnpm:dev:adapter' 'pnpm:serve:frontend'",
     "serve:frontend": "pnpm --filter tiny-robot-demo dev",
+    "build:svgs": "pnpm -F @opentiny/tiny-robot-svg build",
     "format": "prettier --write --list-different \"packages/**/*.{ts,mts,tsx,vue}\"",
     "type-check": "pnpm -F @opentiny/tiny-robot type-check",
     "lint": "eslint . --fix",
