--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -14,6 +14,7 @@
     "@opentiny/vue": "^3.21.3",
     "@opentiny/vue-icon": "^3.21.0",
     "@opentiny/tiny-robot-ai-adapter": "workspace:*",
+    "@opentiny/tiny-robot-svgs": "workspace:*",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "less": "^4.2.2",
     "vue": "^3.5.13",
