feat: add svgs package

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter dev",
     "build:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter build",
     "dev:ai-mocker": "pnpm --filter ai-mocker dev",
-    "dev:demo": "npm run build:adapter && pnpm --filter tiny-robot-demo dev",
+    "dev:demo": "npm run build:svgs && npm run build:adapter && pnpm --filter tiny-robot-demo dev",
+    "build:svgs": "pnpm -F @opentiny/tiny-robot-svg build",
     "format": "prettier --write --list-different \"packages/**/*.{ts,mts,tsx,vue}\"",
     "type-check": "pnpm -F @opentiny/tiny-robot type-check",
     "lint": "eslint . --fix",
