--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,21 +1,24 @@
 {
   "name": "@opentiny/tiny-robot",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
-  "main": "./src/index.ts",
-  "module": "./src/index.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "scripts": {
     "build": "vue-tsc && vite build",
     "type-check": "vue-tsc --noEmit"
   },
-  "dependencies": {
+  "peerDependencies": {
     "vue": "^3.3.11"
   },
   "devDependencies": {
+    "@opentiny/vue": "^3.21.0",
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-dts": "^4.5.3",
     "vue-tsc": "^2.2.8"
   }
 }
