--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-vue": "^10.0.0",
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
+    "lerna": "^7.2.0",
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "typescript": "^5.2.2"
