--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@opentiny/tiny-robot",
-  "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -14,12 +16,16 @@
   },
   "dependencies": {
     "@opentiny/vue": "^3.21.0",
+    "@opentiny/vue-button": "^3.21.0",
     "@opentiny/vue-icon": "^3.22.0",
-    "lodash-es": "4.17.21",  
+    "@opentiny/vue-input": "^3.21.0",
+    "@opentiny/vue-tooltip": "^3.22.0",
+    "lodash-es": "4.17.21",
     "markdown-it": "^14.1.0",
     "vue": "^3.3.11"
   },
   "devDependencies": {
+    "@opentiny/vue-vite-import": "^1.3.0",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.17",
@@ -29,6 +35,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-dts": "^4.5.3",
+    "vue": "^3.3.11",
     "vue-tsc": "^2.2.8"
   }
 }
