--- a/packages/svgs/package.json
+++ b/packages/svgs/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@opentiny/tiny-robot-svgs",
-  "version": "1.0.0",
+  "version": "0.1.0-alpha.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "module": "dist/tiny-robot-svgs.js",
   "types": "dist/types/index.d.ts",
