--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,6 +9,8 @@
     "vitepress": "^1.6.3"
   },
   "dependencies": {
-    "@opentiny/tiny-robot": "workspace:^"
+    "@opentiny/tiny-robot": "workspace:^",
+    "@opentiny/vue": "^3.22.0",
+    "vue": "^3.5.13"
   }
 }
