--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@opentiny/vue": "^3.21.0",
     "lodash-es": "4.17.21",
+    "markdown-it": "^14.1.0",
     "vue": "^3.3.11"
   },
   "devDependencies": {
     "@opentiny/vue-icon": "^3.22.0",
     "@types/lodash-es": "^4.17.12",
+    "@types/markdown-it": "^14.1.2",
+    "@types/node": "^22.13.17",
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
     "less": "^4.3.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
