--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -16,6 +16,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
+    "jsxImportSource": "vue",
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
