feat: add build config & add docs & fix issue & update demo

--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "pnpm -F docs docs:dev",
-    "build": "pnpm -F docs docs:build",
-    "build:lib": "pnpm -F @opentiny/tiny-robot build",
+    "dev": "pnpm build:deps && concurrently 'pnpm dev:components' 'pnpm dev:docs'",
+    "build": "pnpm build:components",
+    "dev:docs": "pnpm build:components && pnpm -F docs dev",
+    "build:docs": "pnpm build:components && pnpm -F docs build",
+    "build:deps": "pnpm -F @opentiny/tiny-robot-* build",
+    "dev:components": "pnpm build:deps && pnpm -F @opentiny/tiny-robot dev",
+    "build:components": "pnpm build:deps && pnpm -F @opentiny/tiny-robot build",
     "dev:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter dev",
     "build:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter build",
-    "dev:ai-mocker": "pnpm --filter ai-mocker dev",
-    "dev:demo": "npm run build:svgs && concurrently 'pnpm dev:ai-mocker' 'pnpm:dev:adapter' 'pnpm:serve:frontend'",
-    "serve:frontend": "pnpm --filter tiny-robot-demo dev",
-    "build:svgs": "pnpm -F @opentiny/tiny-robot-svg build",
+    "dev:ai-mocker": "pnpm -F ai-mocker dev",
+    "build:svgs": "pnpm -F @opentiny/tiny-robot-svgs build",
+    "dev:demo": "npm run build:components && concurrently 'pnpm dev:ai-mocker' 'pnpm -F tiny-robot-demo dev'",
     "format": "prettier --write --list-different \"packages/**/*.{ts,mts,tsx,vue}\"",
     "type-check": "pnpm -F @opentiny/tiny-robot type-check",
     "lint": "eslint . --fix",
@@ -25,6 +28,7 @@
     "eslint-plugin-vue": "^10.0.0",
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
+    "lerna": "^7.2.0",
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "typescript": "^5.2.2"
