fix: review suggestions and update docs

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@opentiny/tiny-robot": "workspace:^",
+    "@opentiny/tiny-robot-svgs": "workspace:^",
     "@opentiny/vue": "^3.22.1"
   }
 }
