--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -21,12 +21,12 @@
     "@opentiny/vue-icon": "^3.22.0",
     "@opentiny/vue-input": "^3.21.0",
     "@opentiny/vue-tooltip": "^3.22.0",
-    "lodash-es": "4.17.21",
     "markdown-it": "^14.1.0",
     "vue": "^3.3.11"
   },
   "devDependencies": {
     "@opentiny/vue-vite-import": "^1.3.0",
+    "@types/dom-speech-recognition": "^0.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.17",
