--- a/packages/svgs/package.json
+++ b/packages/svgs/package.json
@@ -6,7 +6,7 @@
   },
   "type": "module",
   "module": "dist/tiny-robot-svgs.js",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -33,6 +33,7 @@
     "tsx": "^4.19.3",
     "typescript": "~5.7.2",
     "vite": "^5.0.8",
+    "vite-plugin-dts": "^4.5.3",
     "vue-tsc": "^2.2.4"
   },
   "peerDependencies": {
