--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@opentiny/tiny-robot": "workspace:^",
-    "@opentiny/vue": "^3.22.1"
+    "@opentiny/vue": "^3.22.0",
+    "vue": "^3.5.13"
   }
 }
