--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@opentiny/tiny-robot": "workspace:^",
-    "@opentiny/vue": "^3.22.0",
+    "@opentiny/tiny-robot-svgs": "workspace:^",
+    "@opentiny/vue": "^3.22.1"
     "vue": "^3.5.13"
   }
 }
