--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@opentiny/tiny-robot": "workspace:^",
     "@opentiny/tiny-robot-svgs": "workspace:^",
-    "@opentiny/vue": "^3.22.1"
+    "@opentiny/vue": "^3.22.1",
     "vue": "^3.5.13"
   }
 }
