--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opentiny/tiny-robot",
-  "version": "0.1.0-alpha.0",
+  "version": "0.1.0",
   "publishConfig": {
     "access": "public"
   },
