--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -22,6 +22,7 @@
     "@opentiny/vue-icon": "^3.22.0",
     "@opentiny/vue-input": "^3.21.0",
     "@opentiny/vue-tooltip": "^3.22.0",
+    "@vueuse/core": "^13.1.0",
     "markdown-it": "^14.1.0"
   },
   "devDependencies": {
