--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@opentiny/tiny-robot": "workspace:^",
     "@opentiny/tiny-robot-svgs": "workspace:^",
+    "@opentiny/tiny-robot-ai-adapter": "workspace:^",
     "@opentiny/vue": "^3.22.1",
     "vue": "^3.5.13"
   }
