chore: adjust the directory structure and remove unnecessary packages

--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "pnpm build:deps && concurrently \"pnpm dev:components\" \"pnpm dev:docs\"",
+    "dev": "concurrently \"pnpm dev:components\" \"pnpm dev:docs\"",
     "build": "pnpm build:components",
     "dev:docs": "pnpm build:components && pnpm -F docs dev",
     "build:docs": "pnpm build:components && pnpm -F docs build",
     "build:deps": "pnpm -F @opentiny/tiny-robot-* build",
     "dev:components": "pnpm build:deps && pnpm -F @opentiny/tiny-robot dev",
     "build:components": "pnpm build:deps && pnpm -F @opentiny/tiny-robot build",
-    "dev:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter dev",
-    "build:adapter": "pnpm -F @opentiny/tiny-robot-ai-adapter build",
-    "dev:ai-mocker": "pnpm -F ai-mocker dev",
+    "dev:kit": "pnpm -F @opentiny/tiny-robot-kit dev",
+    "build:kit": "pnpm -F @opentiny/tiny-robot-kit build",
     "build:svgs": "pnpm -F @opentiny/tiny-robot-svgs build",
-    "dev:demo": "npm run build:components && concurrently \"pnpm dev:ai-mocker\" \"pnpm -F tiny-robot-demo dev\"",
     "format": "prettier --write --list-different \"packages/**/*.{ts,mts,tsx,vue}\"",
     "type-check": "pnpm -F @opentiny/tiny-robot type-check",
     "lint": "eslint . --fix",
