--- a/docs/package.json
+++ b/docs/package.json
@@ -7,14 +7,17 @@
     "preview": "vitepress preview"
   },
   "devDependencies": {
+    "@types/node": "^22.15.17",
     "gh-pages": "^2.1.1",
+    "shiki": "^3.4.0",
+    "vite": "^5.4.19",
     "vitepress": "^1.6.3",
     "vitepress-demo-plugin": "^1.4.0"
   },
   "dependencies": {
     "@opentiny/tiny-robot": "workspace:^",
-    "@opentiny/tiny-robot-svgs": "workspace:^",
     "@opentiny/tiny-robot-kit": "workspace:^",
+    "@opentiny/tiny-robot-svgs": "workspace:^",
     "@opentiny/vue": "^3.22.1",
     "vue": "^3.5.13"
   }
