--- a/docs/package.json
+++ b/docs/package.json
@@ -9,13 +9,14 @@
   "devDependencies": {
     "gh-pages": "^2.1.1",
     "vitepress": "^1.6.3",
-    "vitepress-demo-plugin": "^1.4.0"
+    "vitepress-demo-plugin": "1.4.0"
   },
   "dependencies": {
     "@opentiny/tiny-robot": "workspace:^",
-    "@opentiny/tiny-robot-svgs": "workspace:^",
     "@opentiny/tiny-robot-kit": "workspace:^",
+    "@opentiny/tiny-robot-svgs": "workspace:^",
     "@opentiny/vue": "^3.22.1",
+    "@opentiny/vue-theme": "^3.22.1",
     "vue": "^3.5.13"
   }
 }
