--- a/docs/package.json
+++ b/docs/package.json
@@ -15,7 +15,9 @@
     "@opentiny/tiny-robot": "workspace:^",
     "@opentiny/tiny-robot-kit": "workspace:^",
     "@opentiny/tiny-robot-svgs": "workspace:^",
+    "@opentiny/tiny-schema-renderer": "1.0.0-beta.5",
     "@opentiny/vue": "^3.22.1",
+    "@opentiny/vue-theme": "^3.22.1",
     "vue": "^3.5.13"
   }
 }
