--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,16 +24,15 @@
     "@opentiny/vue-tooltip": "^3.22.0",
     "@vueuse/core": "^13.1.0",
     "dompurify": "^3.2.5",
-    "markdown-it": "^14.1.0",
-    "prismjs": "^1.30.0"
+    "markdown-it": "^14.1.0"
   },
   "devDependencies": {
     "@opentiny/vue-vite-import": "^1.3.0",
+    "@shikijs/markdown-it": "^3.4.2",
     "@types/dom-speech-recognition": "^0.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.17",
-    "@types/prismjs": "^1.26.5",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "less": "^4.2.2",
