chore: build and packaging optimization

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -7,6 +7,10 @@
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vue-tsc && vite build --watch",
     "build": "vue-tsc && vite build",
