ci(workflow): 添加发布分支选择输入选项

--- a/.github/workflows/dispatch-publish.yml
+++ b/.github/workflows/dispatch-publish.yml
@@ -3,6 +3,14 @@ run-name: Dispatch Publish
 
 on:
   workflow_dispatch:
+    inputs:
+      branch:
+        description: '选择发布分支'
+        required: true
+        default: 'develop'
+        type: choice
+        options:
+          - develop
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.sha }}
