--- a/.github/workflows/dispatch-publish.yml
+++ b/.github/workflows/dispatch-publish.yml
@@ -5,23 +5,20 @@ run-name: Dispatch Publish
 
 # 触发条件配置
 on:
-  # 手动触发工作流
   workflow_dispatch:
     inputs:
-      # 定义手动触发时的输入参数
-      branch:
-        description: '选择发布分支'
+      tag:
+        description: '选择发布版本的tag (alpha/beta/latest)'
         required: true
-        default: 'develop'
+        default: 'alpha'
         type: choice
         options:
-          - develop
+          - alpha
+          - beta
+          - latest
 
-# 并发控制配置
 concurrency:
-  # 使用工作流名称和提交SHA作为并发组
   group: ${{ github.workflow }}-${{ github.sha }}
-  # 如果有新的工作流运行，取消正在进行的工作流
   cancel-in-progress: true
 
 # 定义工作流中的作业
@@ -73,7 +70,7 @@ jobs:
 
       # 步骤8: 发布组件到NPM
       - name: Publish components
-        run: pnpm lerna publish from-package --pre-dist-tag latest
+        run: pnpm lerna publish from-package --pre-dist-tag ${{ inputs.tag }}
         env:
           # 使用NPM令牌进行身份验证
           NODE_AUTH_TOKEN: ${{ secrets.NPM_OPENTINY_ROBOT_TOKEN }}
