--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opentiny/tiny-robot",
-  "version": "0.2.1",
+  "version": "0.2.1-alpha.2",
   "publishConfig": {
     "access": "public"
   },
