--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opentiny/tiny-robot-kit",
-  "version": "0.2.1-alpha.2",
+  "version": "0.2.1",
   "publishConfig": {
     "access": "public"
   },
