--- a/packages/vite-project/tsconfig.app.json
+++ b/packages/vite-project/tsconfig.app.json
@@ -9,7 +9,12 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@opentiny/tiny-robot": ["../../packages/components/src"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
