feat: implement basic and docs

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,6 +26,9 @@
     "@opentiny/vue-icon": "^3.22.0",
     "@opentiny/vue-input": "^3.21.0",
     "@opentiny/vue-tooltip": "^3.22.0",
+    "@opentiny/vue-tabs": "^3.21.0",
+    "@opentiny/vue-tab-item": "^3.21.0",
+    "@opentiny/vue-switch": "^3.21.0",
     "@vueuse/core": "^13.1.0",
     "markdown-it": "^14.1.0"
   },
