feat: update VitePress configuration for development and production modes

--- a/docs/package.json
+++ b/docs/package.json
@@ -2,8 +2,8 @@
   "name": "docs",
   "private": true,
   "scripts": {
-    "dev": "vitepress dev",
-    "build": "vitepress build",
+    "dev": "VP_MODE=development vitepress dev",
+    "build": "VP_MODE=production vitepress build",
     "preview": "vitepress preview"
   },
   "devDependencies": {
